change img and add media query to the element our product

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="css/style.css">
     
 </head>
-<body>
+<body class="background-color">
     <!-- start the header  -->
-    <header id="header">
+    <header id="header" class="background-color border-bottom">
         <div class="container">
             <nav class="menu">
                 <!-- start logo  -->
@@ -23,8 +23,8 @@
                 <!-- start navbar menu and catalog  -->
                 <div class="nav-bar float-left">
                     <div class="con-list col-mos float-left">
-                        <div class="menu"><a href="#"><span></span><span></span></a><span>menu</span></div>
-                        <ul class="list-menu">
+                        <div class="menu"><a href="#" class="border-cicle"><span class="background-color1"></span><span class="background-color1"></span></a><span>menu</span></div>
+                        <ul class="list-menu background-color">
                             <li><a href="#" class="col-mos">item1</a></li>
                             <li><a href="#" class="col-mos">item2</a></li>
                             <li><a href="#" class="col-mos">item3</a></li>
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
                     <div class="catalog col-mos float-left">
-                        <div><a href="#" class="col-mos"><i class="fa fa-th-large" aria-hidden="true"></i></a><span>catalog</span></div>
+                        <div><a href="#" class="col-mos border-cicle"><i class="fa fa-th-large" aria-hidden="true"></i></a><span>catalog</span></div>
                     </div>
 
                 </div>
@@ -40,7 +40,7 @@
                 <div class="other float-left col-mos">
                     <div class="search col-mos float-left">
                         <div class="cont-se">
-                            <a href="#" class="col-mos"><i class="fa fa-search" aria-hidden="true"></i></a><input type="text" name="search" placeholder="Search" class="col-mos">
+                            <a href="#" class="col-mos border-cicle"><i class="fa fa-search" aria-hidden="true"></i></a><input type="text" name="search" placeholder="Search" class="col-mos">
                         </div>
                     </div>
                     <div class="pay float-left">
@@ -54,7 +54,7 @@
         </div>
     </header>
    <!-- start the section of the product -->
-   <section class="our-product">
+   <section class="our-product border-bottom">
        <div class="click-elt">
            <div class="arrow">
             <i class="fas fa-arrow-right"></i>
@@ -88,7 +88,7 @@
            <!-- center box content the img of product -->
            <div class="center-box float-left">
                <div class="img-box">
-                   <img src="css/img/img02.jpg" alt="sunglasses">
+                   <img src="css/img/img02.png" alt="sunglasses">
                </div>
            </div>
            <!-- right box content content the buy button and the price -->
@@ -98,7 +98,7 @@
                </div>
                <div class="bottom">
                    <div class="more col-mos">
-                       <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                       <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                    </div>
                </div>
            </div>
@@ -131,7 +131,7 @@
         <!-- center box content the img of product -->
         <div class="center-box float-left">
             <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
+                <img src="css/img/img02.png" alt="sunglasses">
             </div>
         </div>
         <!-- right box content content the buy button and the price -->
@@ -141,7 +141,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
@@ -184,7 +184,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
@@ -227,7 +227,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
@@ -270,7 +270,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
@@ -313,7 +313,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
