first add to real project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="menu">
                 <!-- start logo  -->
                 <div class="logo float-left col-mos">
-                    <span>aA</span><span>shop<sub>&copy;</sub></span>
+                    <span>aA</span><span>shops<sub>&copy;</sub></span>
                 </div> 
                 <!-- start navbar menu and catalog  -->
                 <div class="nav-bar float-left">
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
                     <div class="catalog col-mos float-left">
-                        <div><a href="#" class="col-mos border-cicle"><i class="fa fa-th-large" aria-hidden="true"></i></a><span>catalog</span></div>
+                        <div><a href="#" class="col-mos border-cicle faild"><i class="fa fa-th-large" aria-hidden="true"></i></a><span>catalog</span></div>
                     </div>
 
                 </div>
@@ -40,10 +40,10 @@
                 <div class="other float-left col-mos">
                     <div class="search col-mos float-left">
                         <div class="cont-se">
-                            <a href="#" class="col-mos border-cicle"><i class="fa fa-search" aria-hidden="true"></i></a><input type="text" name="search" placeholder="Search" class="col-mos">
+                            <a href="#" class="col-mos border-cicle faild"><i class="fa fa-search" aria-hidden="true"></i></a><input type="text" name="search" placeholder="Search" class="col-mos">
                         </div>
                     </div>
-                    <div class="pay float-left">
+                    <div class="pay float-left faild">
                         <i class="fa fa-credit-card-alt col-mos"  aria-hidden="true"></i>
                         <span class="col-mos">cart</span>
                     </div>
@@ -60,26 +60,27 @@
             <i class="fas fa-arrow-right"></i>
            </div>
        </div>
+       <!-- start the profuct presentation  -->
        <div class="product-slide">
            <!-- left box  -->
            <div class="left-box float-left">
                <div class="top">
                    <div class="spic-info col-mos">
                        <p>
-                           <span class="col-mos-op">lens technology</span><br />
-                           G-15XLT
+                           <span class="col-mos-op">type </span><br />
+                           Smartwatch (Bluetooth)
                        </p>
                        <p>
-                        <span class="col-mos-op">frame material</span><br />
-                        Combination
+                        <span class="col-mos-op">versionl</span><br />
+                        SM-R760NDAAXAR – US Version with Warranty 
                     </p>
                    </div>
                </div>
                <div class="bottom">
                 <div class="top">
                     <div class="spic-info col-mos">
-                        <span class="col-mos-op">- RT04GKL WT555</span>
-                        <h1>clubmaster</h1>
+                        <span class="col-mos-op">- Name</span>
+                        <h1>Samsung Gear S3 Frontier</h1>
  
                     </div>
                 </div>
@@ -88,21 +89,22 @@
            <!-- center box content the img of product -->
            <div class="center-box float-left">
                <div class="img-box">
-                   <img src="css/img/img02.png" alt="sunglasses">
+                   <img src="css/img/watch/img01.png" alt="sunglasses">
                </div>
            </div>
            <!-- right box content content the buy button and the price -->
            <div class="right-box float-left">
                <div class="top">
-                  <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
+                  <p> <span class="col-mos">$184.99</span><a href="https://amzn.to/38SCmxv" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
                </div>
                <div class="bottom">
                    <div class="more col-mos">
-                       <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
+                       <a href="#" class="col-mos border-cicle faild"><i class="fas fa-arrow-right"></i></a>more
                    </div>
                </div>
            </div>
        </div>
+       <!-- start the product presentation  -->
        <div class="product-slide">
            <!-- left box  -->
            <div class="left-box float-left">
@@ -110,19 +112,19 @@
                 <div class="spic-info col-mos">
                     <p>
                         <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
+                        Mirrored lens 
                     </p>
                     <p>
                      <span class="col-mos-op">frame material</span><br />
-                     Combination
+                     Plastic frame
                  </p>
                 </div>
             </div>
             <div class="bottom">
              <div class="top">
                  <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
+                     <span class="col-mos-op">- Lens Width: 55 Millimeters</span>
+                     <h1>zeroUV - Retro 80's Classic Colored</h1>
 
                  </div>
              </div>
@@ -131,41 +133,42 @@
         <!-- center box content the img of product -->
         <div class="center-box float-left">
             <div class="img-box">
-                <img src="css/img/img02.png" alt="sunglasses">
+                <img src="css/img/sunglasses/img01.png" alt="sunglasses">
             </div>
         </div>
         <!-- right box content content the buy button and the price -->
         <div class="right-box float-left">
             <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
+               <p> <span class="col-mos">$10.99</span><a href="https://amzn.to/37TZhHu" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle faild"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
        </div>
+       <!-- start the product presentation  -->
        <div class="product-slide">
            <!-- left box  -->
            <div class="left-box float-left">
             <div class="top">
                 <div class="spic-info col-mos">
                     <p>
-                        <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
+                        <span class="col-mos-op">Imported</span><br />
+                        Rubber sole
                     </p>
                     <p>
-                     <span class="col-mos-op">frame material</span><br />
-                     Combination
+                     <span class="col-mos-op">Textile and Syntheticl</span><br />
+                     Men's Charged Assert 8 Running Shoe 
                  </p>
                 </div>
             </div>
             <div class="bottom">
              <div class="top">
                  <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
+                     <span class="col-mos-op">-Black shoes</span>
+                     <h1>Under Armour</h1>
 
                  </div>
              </div>
@@ -174,41 +177,42 @@
         <!-- center box content the img of product -->
         <div class="center-box float-left">
             <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
+                <img src="css/img/shoes/img01.png" alt="sunglasses">
             </div>
         </div>
         <!-- right box content content the buy button and the price -->
         <div class="right-box float-left">
             <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
+               <p> <span class="col-mos">$38.73 - $138.26</span><a href="https://amzn.to/2HQREqV" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle faild"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
       </div>
+      <!-- start the profuct presentation  -->
       <div class="product-slide">
           <!-- left box  -->
           <div class="left-box float-left">
             <div class="top">
                 <div class="spic-info col-mos">
                     <p>
-                        <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
+                        <span class="col-mos-op">Imported</span><br />
+                        Synthetic sole
                     </p>
                     <p>
-                     <span class="col-mos-op">frame material</span><br />
-                     Combination
+                     <span class="col-mos-op">100% Synthetic</span><br />
+                     Women's Brief-Ankle Boot 
                  </p>
                 </div>
             </div>
             <div class="bottom">
              <div class="top">
                  <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
+                     <span class="col-mos-op">-  Black Microfiber Suede</span>
+                     <h1>Dr. Scholl's Shoes</h1>
 
                  </div>
              </div>
@@ -217,150 +221,22 @@
         <!-- center box content the img of product -->
         <div class="center-box float-left">
             <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
+                <img src="css/img/shoes-women/img01.png" alt="sunglasses">
             </div>
         </div>
         <!-- right box content content the buy button and the price -->
         <div class="right-box float-left">
             <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
+               <p> <span class="col-mos">$37.15 - $145.62</span><a href="https://amzn.to/2SPMmCi" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
             </div>
             <div class="bottom">
                 <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
+                    <a href="#" class="col-mos border-cicle faild"><i class="fas fa-arrow-right"></i></a>more
                 </div>
             </div>
         </div>
      </div>
-     <div class="product-slide">
-         <!-- left box  -->
-         <div class="left-box float-left">
-            <div class="top">
-                <div class="spic-info col-mos">
-                    <p>
-                        <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
-                    </p>
-                    <p>
-                     <span class="col-mos-op">frame material</span><br />
-                     Combination
-                 </p>
-                </div>
-            </div>
-            <div class="bottom">
-             <div class="top">
-                 <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
-
-                 </div>
-             </div>
-            </div>
-        </div> 
-        <!-- center box content the img of product -->
-        <div class="center-box float-left">
-            <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
-            </div>
-        </div>
-        <!-- right box content content the buy button and the price -->
-        <div class="right-box float-left">
-            <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
-            </div>
-            <div class="bottom">
-                <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="product-slide">
-        <!-- left box  -->
-        <div class="left-box float-left">
-            <div class="top">
-                <div class="spic-info col-mos">
-                    <p>
-                        <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
-                    </p>
-                    <p>
-                     <span class="col-mos-op">frame material</span><br />
-                     Combination
-                 </p>
-                </div>
-            </div>
-            <div class="bottom">
-             <div class="top">
-                 <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
-
-                 </div>
-             </div>
-            </div>
-        </div> 
-        <!-- center box content the img of product -->
-        <div class="center-box float-left">
-            <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
-            </div>
-        </div>
-        <!-- right box content content the buy button and the price -->
-        <div class="right-box float-left">
-            <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
-            </div>
-            <div class="bottom">
-                <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="product-slide">
-        <!-- left box  -->
-        <div class="left-box float-left">
-            <div class="top">
-                <div class="spic-info col-mos">
-                    <p>
-                        <span class="col-mos-op">lens technology</span><br />
-                        G-15XLT
-                    </p>
-                    <p>
-                     <span class="col-mos-op">frame material</span><br />
-                     Combination
-                 </p>
-                </div>
-            </div>
-            <div class="bottom">
-             <div class="top">
-                 <div class="spic-info col-mos">
-                     <span class="col-mos-op">- RT04GKL WT555</span>
-                     <h1>clubmaster</h1>
-
-                 </div>
-             </div>
-            </div>
-        </div> 
-        <!-- center box content the img of product -->
-        <div class="center-box float-left">
-            <div class="img-box">
-                <img src="css/img/img01.png" alt="sunglasses">
-            </div>
-        </div>
-        <!-- right box content content the buy button and the price -->
-        <div class="right-box float-left">
-            <div class="top">
-               <p> <span class="col-mos">$220</span><a href="#" class="col-mos buy-btn"><i class="fas fa-shopping-cart"></i>buy now</a></p>
-            </div>
-            <div class="bottom">
-                <div class="more col-mos">
-                    <a href="#" class="col-mos border-cicle"><i class="fas fa-arrow-right"></i></a>more
-                </div>
-            </div>
-        </div>
-    </div>
+    
    </section>
 
 
